added: url path is changed.

--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
@@ -74,7 +74,7 @@
         function menuList() {
             // Call Web API to get a list of menus
             $.ajax({
-                url: '/menu/admin/api/menu',
+                url: '/menu/admin/api/menus',
                 type: 'GET',
                 dataType: 'json',
                 success: function (menus) {
