added: Url detail is changed in menu of the day list create admin view.

--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
@@ -111,7 +111,7 @@
         function menuBuildTableRow(menu) {
             var ret = "<tr>" +
                 "<td >" +
-                `<a href=\"./pages/menus_detail.html?menu_id=${menu.id}\">` +
+                `<a href=\"/menu/admin/menus/${menu.id}\">` +
                 menu.date +
                 "</a >" +
                 "</td>" +
