changed: Error message are improved.

--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
@@ -159,8 +159,9 @@
 
             msg += "Code: " + request.status + "\n";
             msg += "Text: " + request.statusText + "\n";
-            if (request.responseJSON != null) {
-                msg += "Message" + request.responseJSON.Message + "\n";
+            console.log(request.responseJSON)
+            if (request.responseText != null) {
+                msg += "Message: " + request.responseText + "\n";
             }
 
             alert(msg);
