--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
@@ -53,7 +53,7 @@
             <div class="row">
               <div class="col-xs-1">
                 <button type="button" id="updateButton" class="btn btn-primary" onclick="updateClick();">
-                  Actualizar Menú
+                  Guardar cambios
                 </button>
               </div>
 
