fixed: Redirect on deleted is changed to menu admin listing.

--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
@@ -213,7 +213,7 @@
       url: `/menu/admin/api/menus/${id}`,
       type: 'DELETE',
       success: function (product) {
-        window.location.replace("../index.html");
+        window.location.replace("/menu/admin/menus");
       },
       error: function (request, message, error) {
         handleException(request, message, error);
