added: Logout link is added.

--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_retrieve_update_destroy.html
@@ -3,10 +3,19 @@
 {% block content %}
 <input type="hidden" id="menu_id" value="0" />
 <div class="container">
-  <div class="row">
-    <div class="col-sm-6">
-      <h2>Detalle del Menú del día</h2>
+  <div class="row" style="padding-top: 20px;">
+    <div class="col-sm-2">
       <p><a href="/menu/admin/menus">Mostrar todos los menús</a></p>
+    </div>
+    <div class="col-sm-8">
+    </div>
+    <div class="col-sm-2">
+      <p><a class="pull-right" href="/menu/admin/logout">Salir</a></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h2>Detalle del Menú del día</h2>
     </div>
   </div>
   <div class="row">
