--- a/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
+++ b/cornershop-backend-test/backend_test/menu_of_the_day/templates/menu_of_the_day_list_create.html
@@ -2,6 +2,13 @@
 {% block title %} Nora {% endblock %}
 {% block content %}
 <div class="container">
+  <div class="row" style="padding-top: 20px;">
+    <div class="col-sm-10">
+    </div>
+    <div class="col-sm-2">
+      <p><a class="pull-right" href="/menu/admin/logout">Salir</a></p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-6">
       <h2>Menús por fecha</h2>
